[package]
name = "catan-back-rust"
version = "0.1.0"
authors = ["nesso <32949286+nesso-pfl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-rt = "1.1.1"
