[package]
name = "catan-back-rust"
version = "0.1.0"
authors = ["nesso <32949286+nesso-pfl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
env_logger = "0.7"
rand = "0.7"